--- a/custom_theme/nav.html
+++ b/custom_theme/nav.html
@@ -1,5 +1,13 @@
 <nav role="navigation">
 <ul class="summary">
+{% if nav|length>1 %}
+    {% for nav_item in nav %}
+        <li class="{% if nav_item.active%}current{% endif %}">
+            <a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
+        </li>
+    {% endfor %}
+{% endif %}
+<li class="divider"></li>
 {% for toc_item in page.toc %}
     <li class="chapter"><a href="{{ toc_item.url }}">{{ toc_item.title }}</a></li>
     {% for toc_item in toc_item.children %}
